[gd_scene load_steps=26 format=3 uid="uid://6xfn4nq2o6t2"]

[ext_resource type="Script" path="res://scripts/note.gd" id="1_h66s6"]
[ext_resource type="Texture2D" uid="uid://3ii2rs78beqi" path="res://icons/Check.png" id="2_0ccyf"]
[ext_resource type="Texture2D" uid="uid://ufs75c631sq5" path="res://icons/More.png" id="3_b6h6x"]
[ext_resource type="Texture2D" uid="uid://b28hnauo7cnyp" path="res://icons/Add.png" id="3_vhkoc"]
[ext_resource type="PackedScene" uid="uid://d21n0oa01l2kr" path="res://scenes/value.tscn" id="5_qajn5"]
[ext_resource type="Texture2D" uid="uid://q3mbnvocjw5p" path="res://icons/Arrow.png" id="6_q50ub"]
[ext_resource type="Texture2D" uid="uid://b8tj2n8ppqs3o" path="res://icons/restart.png" id="6_wbvmg"]
[ext_resource type="Texture2D" uid="uid://bm0g118iqy7ma" path="res://icons/Share.png" id="8_xagwj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekrkk"]
bg_color = Color(0.282353, 0.278431, 0, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
shadow_color = Color(0.165656, 0.165656, 0.165656, 0.368627)
shadow_size = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a52ej"]
bg_color = Color(0.647059, 0.172549, 0.580392, 0)
border_width_bottom = 1
shadow_color = Color(0.439216, 0.00784314, 0.439216, 0.419608)
shadow_size = 14

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f3kfx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdahu"]
bg_color = Color(0.141176, 0.141176, 0.141176, 0.615686)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dj0gd"]
bg_color = Color(0.141176, 0.141176, 0.141176, 0.615686)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.912289, 0.912289, 0.912289, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xe5r8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mv1k5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fwwvw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmamk"]
bg_color = Color(0, 0, 0, 0.639216)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_color = Color(0.716101, 0.726596, 0.688395, 0.823529)
border_blend = true
corner_radius_top_left = 32
corner_radius_top_right = 32
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbxyp"]
bg_color = Color(0, 0, 0, 0.164706)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.495173, 0.508728, 0.465047, 0.760784)
border_blend = true
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_offb2"]
bg_color = Color(0, 0, 0, 0.164706)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0207105, 0.237874, 1, 0.760784)
border_blend = true
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6xk0"]
content_margin_left = 8.0
content_margin_right = 7.0
bg_color = Color(0, 0, 0, 0.643137)
border_width_top = 1
border_color = Color(0.8, 0.8, 0.8, 0.384314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bklsf"]
bg_color = Color(0, 0.450301, 0.301629, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.133196, 0.133196, 0.133196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x76x8"]
bg_color = Color(0.517647, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1qf6c"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.243137)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.572988, 0.572988, 0.572988, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqaok"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.243137)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7jgw"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.243137)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Note" type="PanelContainer" node_paths=PackedStringArray("AllSettings")]
custom_minimum_size = Vector2(1040, 256)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -520.0
offset_right = 520.0
offset_bottom = 349.0
grow_horizontal = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ekrkk")
script = ExtResource("1_h66s6")
AllSettings = [NodePath("VBoxContainer/PanelContainer/more_sett/row1/hdr_c"), NodePath("VBoxContainer/PanelContainer/more_sett/row1/hd2_c"), NodePath("VBoxContainer/PanelContainer/more_sett/row1/ttl_c"), NodePath("VBoxContainer/PanelContainer/more_sett/row2/brd_c"), NodePath("VBoxContainer/PanelContainer/more_sett/row2/msd_c"), NodePath("VBoxContainer/PanelContainer/more_sett/row2/mbg_c")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="margin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6

[node name="Head" type="PanelContainer" parent="VBoxContainer/margin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_a52ej")

[node name="Title" type="RichTextLabel" parent="VBoxContainer/margin/Head"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_constants/line_separation = 5
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[color=red]UNKNOWN"
scroll_active = false

[node name="Editor" type="HBoxContainer" parent="VBoxContainer/margin/Head"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TitleEdit" type="TextEdit" parent="VBoxContainer/margin/Head/Editor"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
text = "UNKNOWN"
caret_blink = true
caret_multiple = false

[node name="CheckBox" type="Button" parent="VBoxContainer/margin/Head/Editor"]
unique_name_in_owner = true
custom_minimum_size = Vector2(88, 88)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_f3kfx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vdahu")
theme_override_styles/normal = SubResource("StyleBoxFlat_dj0gd")
toggle_mode = true

[node name="Check" type="TextureRect" parent="VBoxContainer/margin/Head/Editor/CheckBox"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 1024.0
scale = Vector2(0.086, 0.086)
mouse_filter = 2
texture = ExtResource("2_0ccyf")

[node name="TitleButton" type="Button" parent="VBoxContainer/margin/Head"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xe5r8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mv1k5")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="MarginText" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 0

[node name="List" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginText"]
layout_mode = 2

[node name="MarginButtons" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 24

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginButtons"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Left" type="VBoxContainer" parent="VBoxContainer/MarginButtons/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="more" type="Button" parent="VBoxContainer/MarginButtons/VBoxContainer/Left"]
custom_minimum_size = Vector2(100, 66.92)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_fwwvw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nmamk")
theme_override_styles/normal = SubResource("StyleBoxFlat_wbxyp")
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginButtons/VBoxContainer/Left/more"]
layout_mode = 1
offset_top = -17.08
offset_right = 1024.0
offset_bottom = 1006.92
rotation = 1.5708
scale = Vector2(0.098, -0.098)
mouse_filter = 2
texture = ExtResource("3_b6h6x")

[node name="add_ing" type="Button" parent="VBoxContainer/MarginButtons/VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_fwwvw")
theme_override_styles/normal = SubResource("StyleBoxFlat_offb2")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginButtons/VBoxContainer/add_ing"]
layout_mode = 1
offset_right = 1024.0
offset_bottom = 1024.0
scale = Vector2(0.117, 0.117)
mouse_filter = 2
texture = ExtResource("3_vhkoc")

[node name="Right" type="VBoxContainer" parent="VBoxContainer/MarginButtons/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t6xk0")

[node name="more_sett" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 17

[node name="row1" type="HBoxContainer" parent="VBoxContainer/PanelContainer/more_sett"]
layout_mode = 2

[node name="hdr_c" parent="VBoxContainer/PanelContainer/more_sett/row1" instance=ExtResource("5_qajn5")]
layout_mode = 2
text = "header color"
Targets = [NodePath("../../../../margin/Head")]
IsPanel = true
target_values = ["shadow_color"]
value_c = Color(0.439216, 0.00784314, 0.439216, 0.419608)
global_save = null

[node name="hd2_c" parent="VBoxContainer/PanelContainer/more_sett/row1" instance=ExtResource("5_qajn5")]
layout_mode = 2
text = "header color2"
Targets = [NodePath("../../../../margin/Head")]
IsPanel = true
target_values = ["bg_color"]
value_c = Color(0, 0, 0, 0)
global_save = null

[node name="ttl_c" parent="VBoxContainer/PanelContainer/more_sett/row1" instance=ExtResource("5_qajn5")]
layout_mode = 2
text = "title color"
Targets = [NodePath("../../../../margin/Head/Title")]
target_values = ["default_color"]
value_c = Color(1, 1, 1, 1)
global_save = null

[node name="row2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/more_sett"]
layout_mode = 2

[node name="brd_c" parent="VBoxContainer/PanelContainer/more_sett/row2" instance=ExtResource("5_qajn5")]
layout_mode = 2
text = "border color"
Targets = [NodePath("../../../../..")]
IsPanel = true
target_values = ["border_color"]
value_c = Color(0.439216, 0.00784314, 0.439216, 0.419608)
global_save = null

[node name="msd_c" parent="VBoxContainer/PanelContainer/more_sett/row2" instance=ExtResource("5_qajn5")]
layout_mode = 2
text = "Volume color"
Targets = [NodePath("../../../../..")]
IsPanel = true
target_values = ["shadow_color"]
value_c = Color(0.164706, 0.164706, 0.164706, 0.368627)
global_save = null

[node name="mbg_c" parent="VBoxContainer/PanelContainer/more_sett/row2" instance=ExtResource("5_qajn5")]
layout_mode = 2
text = "BG color"
Targets = [NodePath("../../../../..")]
IsPanel = true
target_values = ["bg_color"]
value_c = Color(0.164706, 0.164706, 0.164706, 0)
global_save = null

[node name="row3" type="HBoxContainer" parent="VBoxContainer/PanelContainer/more_sett"]
layout_mode = 2
alignment = 1

[node name="titleToggle" type="Button" parent="VBoxContainer/PanelContainer/more_sett/row3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 44
theme_override_styles/pressed = SubResource("StyleBoxFlat_bklsf")
theme_override_styles/normal = SubResource("StyleBoxFlat_x76x8")
toggle_mode = true
button_pressed = true
text = " toggle title "

[node name="row4" type="HBoxContainer" parent="VBoxContainer/PanelContainer/more_sett"]
layout_mode = 2
theme_override_constants/separation = 75
alignment = 1

[node name="rst" type="Button" parent="VBoxContainer/PanelContainer/more_sett/row4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_1qf6c")
theme_override_styles/normal = SubResource("StyleBoxFlat_dqaok")

[node name="txtr" type="TextureRect" parent="VBoxContainer/PanelContainer/more_sett/row4/rst"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = 1.5708
scale = Vector2(0.155, -0.155)
texture = ExtResource("6_wbvmg")
flip_h = true

[node name="up" type="Button" parent="VBoxContainer/PanelContainer/more_sett/row4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_1qf6c")
theme_override_styles/normal = SubResource("StyleBoxFlat_e7jgw")

[node name="txtr" type="TextureRect" parent="VBoxContainer/PanelContainer/more_sett/row4/up"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = 1.5708
scale = Vector2(0.078, -0.078)
texture = ExtResource("6_q50ub")

[node name="dn" type="Button" parent="VBoxContainer/PanelContainer/more_sett/row4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_1qf6c")
theme_override_styles/normal = SubResource("StyleBoxFlat_dqaok")

[node name="txtr" type="TextureRect" parent="VBoxContainer/PanelContainer/more_sett/row4/dn"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = 1.5708
scale = Vector2(0.078, -0.078)
texture = ExtResource("6_q50ub")
flip_h = true

[node name="shr" type="Button" parent="VBoxContainer/PanelContainer/more_sett/row4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_1qf6c")
theme_override_styles/normal = SubResource("StyleBoxFlat_dqaok")

[node name="txtr" type="TextureRect" parent="VBoxContainer/PanelContainer/more_sett/row4/shr"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.078, 0.078)
texture = ExtResource("8_xagwj")
flip_h = true

[connection signal="focus_exited" from="VBoxContainer/margin/Head/Editor/TitleEdit" to="." method="_on_title_edit_focus_exited"]
[connection signal="text_changed" from="VBoxContainer/margin/Head/Editor/TitleEdit" to="." method="_on_title_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/margin/Head/Editor/CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="VBoxContainer/margin/Head/TitleButton" to="." method="_on_title_button_pressed"]
[connection signal="toggled" from="VBoxContainer/MarginButtons/VBoxContainer/Left/more" to="." method="_on_more_toggled"]
[connection signal="pressed" from="VBoxContainer/MarginButtons/VBoxContainer/add_ing" to="." method="_on_edit_note_pressed"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/more_sett/row3/titleToggle" to="." method="_on_title_toggle_toggled"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/more_sett/row4/rst" to="." method="_on_rst_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/more_sett/row4/up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/more_sett/row4/dn" to="." method="_on_dn_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/more_sett/row4/shr" to="." method="_on_shr_pressed"]
